--- a/chat-service/src/main/resources/bootstrap.yml
+++ b/chat-service/src/main/resources/bootstrap.yml
@@ -3,4 +3,4 @@ spring:
         name: chat-service
     cloud:
         config:
-            uri: http://localhost:8888/
+            uri: http://${CONFIG_SERVER_HOST:localhost}:8888/
