--- a/config-server/src/main/resources/config/email-service.yml
+++ b/config-server/src/main/resources/config/email-service.yml
@@ -5,7 +5,7 @@ spring:
     application:
         name: email-service
     zipkin:
-        base-url: http://localhost:9411
+        base-url: http://${ZIPKIN_HOST:localhost}:9411
     mail:
         host: smtp.gmail.com
         username: twitter.spring.reactjs@gmail.com
@@ -24,6 +24,8 @@ mail:
 eureka:
     client:
         service-url:
-            defaultZone: http://localhost:8761/eureka
+            defaultZone: http://${EUREKA_HOST:localhost}:8761/eureka
         fetch-registry: true
         register-with-eureka: true
+    instance:
+        hostname: ${EUREKA_HOST:localhost}
