--- a/config-server/src/main/resources/config/image-service.yml
+++ b/config-server/src/main/resources/config/image-service.yml
@@ -5,7 +5,7 @@ spring:
     application:
         name: image-service
     zipkin:
-        base-url: http://localhost:9411
+        base-url: http://${ZIPKIN_HOST:localhost}:9411
 
 amazon:
     s3:
@@ -18,6 +18,8 @@ amazon:
 eureka:
     client:
         service-url:
-            defaultZone: http://localhost:8761/eureka
+            defaultZone: http://${EUREKA_HOST:localhost}:8761/eureka
         fetch-registry: true
         register-with-eureka: true
+    instance:
+        hostname: ${EUREKA_HOST:localhost}
