--- a/config-server/src/main/resources/config/websocket-service.yml
+++ b/config-server/src/main/resources/config/websocket-service.yml
@@ -5,10 +5,12 @@ spring:
     application:
         name: websocket-service
     zipkin:
-        base-url: http://localhost:9411
+        base-url: http://${ZIPKIN_HOST:localhost}:9411
 eureka:
     client:
         service-url:
-            defaultZone: http://localhost:8761/eureka
+            defaultZone: http://${EUREKA_HOST:localhost}:8761/eureka
         fetch-registry: true
         register-with-eureka: true
+    instance:
+        hostname: ${EUREKA_HOST:localhost}
