--- a/config-server/src/main/resources/config/tweet-service.yml
+++ b/config-server/src/main/resources/config/tweet-service.yml
@@ -32,6 +32,8 @@ resilience4j:
                 minimum-number-of-calls: 5
             user-service:
                 minimum-number-of-calls: 5
+            lists-service:
+                minimum-number-of-calls: 5
             websocket-service:
                 minimum-number-of-calls: 5
 feign:
