--- a/config-server/src/main/resources/config/user-service.yml
+++ b/config-server/src/main/resources/config/user-service.yml
@@ -9,6 +9,7 @@ spring:
         password: root
         driverClassName: org.postgresql.Driver
     jpa:
+        show-sql: true
         hibernate:
             ddl-auto: validate
         properties:
