--- a/config-server/src/main/resources/config/lists-service.yml
+++ b/config-server/src/main/resources/config/lists-service.yml
@@ -14,6 +14,10 @@ spring:
         properties:
             hibernate:
                 dialect: org.hibernate.dialect.PostgreSQLDialect
+    batch:
+        initialize-schema: always
+        job:
+           enabled: false
     flyway:
         locations: classpath:db/migration
     zipkin:
